changed name, put something to view

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta charset="utf-8" />
 	<meta name="description" content="Resume website for hw 2 in CSE 134B" />
 	<meta name="keywords" content="HTML, CSS, JavaScript" />
 	<meta name="author" content=" Georolyn :)" />
@@ -10,6 +9,7 @@
 	<title>CSE 134B Homework 2 Website</title>
     
 </head>
+	<header>wee</header>
 <body>
     
 </body>
