fixing validator issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html lang="en">
+	
 <html>
 <head>
     <meta charset="UTF-8" />
@@ -9,8 +11,8 @@
 	<title>CSE 134B Homework 2 Website</title>
     
 </head>
-	<header>wee</header>
+	
 <body>
-    
+    <header>wee</header>
 </body>
 </html>
