--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	
-<html>
 <head>
-    <meta charset="UTF-8" />
-	<meta name="description" content="Resume website for hw 2 in CSE 134B" />
-	<meta name="keywords" content="HTML, CSS, JavaScript" />
-	<meta name="author" content=" Georolyn :)" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+	<meta name="description" content="Resume website for hw 2 in CSE 134B" >
+	<meta name="keywords" content="HTML, CSS, JavaScript" >
+	<meta name="author" content=" Georolyn :)" >
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<title>CSE 134B Homework 2 Website</title>
     
 </head>
