only a couple more + fixes for validation

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 	<main>
 		<section id="About">
 			<h2>About Me</h2>
-			This is the about section
+			<a href="https://drive.google.com/file/d/1Odwau_fvA9R157fU6EWKdij_dbI9AVsg/view?usp=sharing"> My Resume</a>
+			<p>I know the following languages:<br>
+				<span style="color:gray;">Java, HTML, CSS, C++, C </span></p>
 		</section>
 		<aside>
-			Fun Facts about me:
+			<strong>Fun Facts about me:</strong>
 			<ul>
-				<li> I like cats</li>
+				<li> I like <b>cats</b></li>
 				<li> I like crafty stuff</li>
 			</ul>
 		</aside>
 		<section id="Contact Me">
-			<form action="" method="get">
+			<form action="httpbin.org/" method="get">
 				<h2> Contact Me</h2>
 				<label for="contact_email"> Email: </label>
 				<input type="text" name="contact_email">
@@ -43,7 +45,7 @@
 			<h2>Experimental Section</h2>
 			<figure>
 				<img src="/images/chris_cat_golden_circle.jpg" width="200rem" height="200rem" alt="A cat picture">
-				<figcaption> My friend's cat embodying the golden ratio</figcaption>
+				<figcaption> My friend's cat embodying the <i>golden ratio</i></figcaption>
 			</figure>
 			<button>❤️ for the cat</button>
 			<fieldset>
@@ -65,8 +67,8 @@
 					</li>
 					<li>
 						<label>What is your favorite animal? Why?</label>
-						<textarea id="text_fav_animal" name="text_fav_animal" rows="2" cols="30">
-							I like ... because...
+						<textarea id="text_fav_animal" name="text_fav_animal">
+							I like ...
 						</textarea>
 					</li>
 				</ol>
