fixed some validotr

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<caption>Known Languages</caption>
 				<colgroup>
 					<col style="background-color: lightblue;">
+					<col style="background-color: red">
 				</colgroup>
 				<tr>
 				  <th>Langauge</th>
@@ -167,11 +168,12 @@
 			<p>If <em>only</em> i knew what the <code>background-color</code> property is.....</p>
 			<p>The song I have on repeat right now...</p>
 			<video controls>
-				<source src="othermedia\catpetting.mp4" type="video/mp4">
+				<source src="othermedia/catpetting.mp4" type="video/mp4">
 			</video>
 			
 			<audio controls>
-				<source src="othermedia\Wow sound effect (no copyright).mp3" type="audio/mp3">
+				<source src="othermedia/Wow sound effect (no copyright).mp3" type="audio/mp3">
+			</audio>
 			<template>
 				<h3>Project: </h3>
 				<a href=""> Github link </a>
