--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
 			</video>
 			
 			<audio controls>
-				<source src="othermedia/Wow sound effect (no copyright).mp3" type="audio/mp3">
+				<source src="othermedia/wow.mp3" type="audio/mp3">
 			</audio>
+			
 			<template>
 				<h3>Project: </h3>
 				<a href=""> Github link </a>
