last touches + validation check

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content=" Georolyn :)" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<title>CSE 134B Homework 2 Website</title>
-    <link rel="icon" type="image/x-icon" href="/images/chris_cat_golden_circle.avif">
+    <link rel="icon" type="image/x-icon" href="/images/chris_cat_golden_circle.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
@@ -120,7 +120,7 @@
 				color:white;
 				font-size:3em;
 			}
-			margin:1em;
+			
 		}
 		main {
 			display: flex;
@@ -191,7 +191,7 @@
 			}
 		}
 		#Projects #mern_pic, #Projects #omdb_pic{
-			object-fit: 50% 50%;
+			object-position: 50% 50%;
 		}
 		#Experiments{
 			& ul{
