color updates and font updates bg updates color switcher updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript" >
 	<meta name="author" content=" Georolyn >:D" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-	<title>CSE 134B Homework 2 Website</title>
+	<title>Georolyn Ngo Resume Website</title>
     <link rel="icon" type="image/x-icon" href="/images/chris_cat_golden_circle.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,6 +42,7 @@
 	</header>
 	<div id="picture_holder">
 		<!-- https://www.istockphoto.com/photo/original-wide-format-background-image-on-autumn-theme-with-space-for-text-gm1556220067-526827878 -->
+		<!-- https://www.istockphoto.com/vector/watercolor-japanese-pattern-background-gm1355574196-430022547?phrase=mint+green&searchscope=image%2Cfilm -->
 		<h2 id="welcome_banner">Welcome!</h2>
 	</div>
 	<main>
@@ -85,7 +86,7 @@
 			<ul class="colormatch">
 				<li>
 					<h3>My Resume</h3> <br>
-					<iframe src="https://drive.google.com/file/d/1Odwau_fvA9R157fU6EWKdij_dbI9AVsg/preview?usp=sharing" title="My resume"></iframe>
+					<iframe src="https://drive.google.com/file/d/16fRkMx2GeLujetf7hSb1ANzcpW-Wlz61/preview?usp=sharing" title="My resume"></iframe>
 				</li>
 				<li>
 					<p>I know the following languages: </p>
